# spirevolt-editor

./: README.md  rust-spirevolt-editor.spec
practice/src/: main.rs
spirevolt-editor/: Cargo.toml
spirevolt-editor/src/: main.rs  sp_program.rs  term_prep.rs  test.c  test.txt
vulcan-editor/: Cargo.toml
vulcan-editor/src/: clean.rs  controls.rs  cwd.rs  edit.rs  main.rs  test.c
vulcan_editor/: Cargo.toml
