[package]
name = "spirevolt-editor"
version = "0.1.9"
edition = "2021"
#CargoLicense = "
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "A simple non-gui text editor"

[dependencies]
crossterm = "0.26.1"
unindent = "0.2.1"
terminal_size = "0.2.5"
clearscreen = "2.0.0"
ansi-escapes = "0.1.1"
